frontend/src/components/Employee.module.css
.main {
	height: 300vh;
}

.box {
	position: absolute;
	top: 12rem;
	width: 100%;
	display: grid;
	grid-template-columns: 1fr;
	grid-template-rows: auto;
}

.info-box {
	margin: 0 auto;
	padding: 0 2em;
	text-align: center;
}

.header-box {
	width: 100%;
	position: relative;
	margin-bottom: 2rem;
}

.info-header {
	display: block;
	font-size: 2.4rem;
	font-weight: bold;
	text-align: center;
	color: #ffffff;
}

.edit,
.remove {
	border: none;
	padding: 1.5rem 3rem;
	border-radius: 8px;
	outline: none;
	background: none;
	cursor: pointer;
}

.edit-icon {
	width: 2.4rem;
}

.modifier-container {
	margin-top: 3rem;
	display: flex;
	justify-content: space-around;
}

.info-label {
	font-weight: bold;
}

.info {
	margin-bottom: 1rem;
	font-size: 2rem;
	color: #ffffff;
}

.info:last-child {
	margin-bottom: 0;
}

.info-label {
	margin-right: 0.5rem;
}

.docs-container {
	margin-top: 0rem;
	padding: 0 4rem;
	display: grid;
	grid-template-columns: 1fr;
	grid-template-rows: auto;
	gap: 2rem;
	justify-items: center;
}

.docs-header {
	margin: 4rem 0;
}

.work-box {
	display: grid;
	grid-template-columns: 1fr;
	grid-template-rows: repeat(2, 1fr);
}

.work-header {
	margin-top: 4rem;
	text-align: center;
}

@media (min-width: 576px) {
	.docs-container {
		grid-template-columns: repeat(2, 1fr);
	}
}

@media (min-width: 992px) {
	.box {
		top: 15rem;
		height: calc(100vh - 15rem);
		grid-template-rows: repeat(2, 1fr);
		grid-template-columns: 2fr 3fr;
	}

	.info {
		font-size: 2.2rem;
	}

	.info-box {
		grid-column: 1 / 2;
		padding: 0;
		margin-left: 5rem;
		text-align: left;
	}

	.info-header {
		text-align: center;
	}

	.header-box {
		margin-bottom: 3rem;
	}

	.employee-header {
		margin-right: 8rem;
		text-align: left;
	}

	.edit,
	.remove {
		border: 1px solid #ffffff;
		margin: 0 2rem 0 0;
	}

	.modifier-container {
		justify-content: start;
	}

	.docs-box {
		grid-column: 2 / 3;
	}

	.docs-container {
		grid-template-rows: auto;
	}

	.docs-header {
		text-align: center;
		margin: 0 0 4rem 0;
	}

	.work-box {
		grid-template-columns: repeat(2, 1fr);
		grid-column: 1 / 3;
	}

	.work-header {
		grid-column: 1 / 3;
	}
}

@media (min-width: 1200px) {
	.docs-container {
		grid-template-columns: repeat(3, 1fr);
	}
}

